# noriscommonui

./: .gitignore  CMakeLists.txt
.github/workflows/: clang-format.yml
cmake/: NorisCommonUIConfig.cmake.in  install-noriscommonui.cmake
include/: NorisQTDisplay.hpp  OBSQTDisplay.hpp
src/: NorisQTDisplay.cpp  OBSQTDisplay.cpp  SurfaceEventFilter.cpp  SurfaceEventFilter.hpp  display-helpers.hpp
